--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://elianadams.github.io/resume/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
