--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
         <address class="contact-info">
           <span class="email-val"><a href="mailto:elian.adams@protonmail.com">elian.adams@protonmail.com</a></span>
-          <span class="separator"></span>
-          <span class="phone-val">+66-92-254-9153</span>
+          <!--<span class="separator"></span>-->
+          <span class="phone-val"></span>
         </address>
       </header>
 
