--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elian Adams Resume</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:400,300,700"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,300,700" rel="stylesheet" type="text/css"/>
     <link href="https://elianadams.github.io/resume/style.css" rel="stylesheet" type="text/css" />
+    <!-- Adapted from a design by naman kalkhuria https://codepen.io/knaman2609-->
   </head>
 
   <body>
