--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elian Adams Resume</title>
+    <title>Elian Adams | Resume</title>
     <link
       href="https://fonts.googleapis.com/css?family=Lato:400,300,700"
       rel="stylesheet"
       type="text/css"
     />
-    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://github.com/elianadams/resume/blob/main/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -22,8 +22,6 @@
         </div>
         <address class="contact-info">
           <span class="email-val"><a href="mailto:elian.adams@protonmail.com">elian.adams@protonmail.com</a></span>
-          <!-- <span class="separator"></span>
-          <span class="phone-val">+66-92-254-9153</span> -->
         </address>
       </header>
   
