--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="https://github.com/elianadams/resume/blob/main/style.css" rel="stylesheet" type="text/css" />
+    <link href="/main/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
