--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="https://raw.githubusercontent.com/elianadams/resume/main/style.css" rel="stylesheet" type="text/css" />
+      <link href="https://elianadams.github.io/resume/style.css" rel="stylesheet" type="text/css" />
+    <!-- Adapted from a design by naman kalkhuria https://codepen.io/knaman2609-->
   </head>
+  
+
 
   <body>
     <main>
