--- a/index.html
+++ b/index.html
@@ -52,15 +52,14 @@
                   <ul>
                     <li>
                       Pioneered test, learn, iterate approach to develop minimum viable product of a community-driven
-                      subscription product. Led development using customised low-code tools, saving 95% on the cost of
+                      subscription product. Creatively led development using customised low-code tools, saving 95% on the cost of
                       traditional development.
                     </li>
                     <li>
                       Championed regular, methodical customer interviews for customer-centric product development.
                     </li>
                     <li>
-                      Owned technology updates & key metrics for monthly business KPI review sessions, supporting business
-                      strategy & decision-making.
+                      Owned technology updates & key metrics for monthly business KPI presentations, supporting business strategy & making recommendations based on data.
                     </li>
                     <li>
                       Built & documented technology business processes across the new business to operate at maximum
@@ -302,7 +301,7 @@
   
             <div class="skills__item">
               <div class="lower-left">
-                <div class="name">HTML · CSS · Markdown</div>
+                <div class="name">HTML · CSS · Markdown · Dev Tools</div>
               </div>
               <div class="lower-right">
                 <input id="ck1" type="checkbox" checked />
