--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <label for="ck2"></label>
                 <input id="ck3" type="checkbox" checked />
                 <label for="ck3"></label>
-                <input id="ck4" type="checkbox" checked />
+                <input id="ck4" type="checkbox" />
                 <label for="ck4"></label>
                 <input id="ck5" type="checkbox" />
                 <label for="ck5"></label>
