--- a/index.html
+++ b/index.html
@@ -236,13 +236,17 @@
           <div class="section__title print">Projects</div>
           <div class="section__list">
             <div class="section__list-item">
+                         <div class="left">
               <div class="company-name">New Heaven Marine Conservation Program</div>
               <div class="addr">Koh Tao, TH</div>
               <div class="duration">Aug 2022</div>
+              </div>
+              <div class="right">
               <div class="text">
                 Joined program to learn about coral reef ecosystems, volunteering on data-driven projects aiming to
                 improve reef
                 health.
+              </div>
               </div>
             </div>
           </div>
