--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
               <div class="duration">Aug 2022</div>
               </div>
               <div class="right">
+                                <div class="name">Conservation Diver Certification</div>
               <div class="text">
                 Joined program to learn about coral reef ecosystems, volunteering on data-driven projects aiming to
                 improve reef
